fixed logo error-firectory

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container flex flex-col h-screen p-8 ">
         <!-- This is the logo at the top of the page -->
         <div class="px-5 py-2">
-            <img src="/KT Logo/kt-logo-green.png" alt="KT Logo" class="logo" width='85' height='85'>
+            <img src="img/KT Logo/kt-logo-green.png" alt="KT Logo" class="logo" width='85' height='85'>
         </div>
         <!-- This is the section holding the button and the group image -->
         <div class="content m-auto items-center">
