--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
     <link rel="stylesheet" href="output.css" type="text/css">
 </head>
-<body class="font-dms bg-gradient-to-r from-[#FFFFFF] to-[#B5FFBD] ">
+<body class="font-robo bg-gradient-to-r from-[#FFFFFF] to-[#B5FFBD] ">
     <div class="container flex flex-col h-screen p-8 ">
         <!-- This is the logo at the top of the page -->
         <div class="px-5 py-2">
