more design changes for desktop res

--- a/index.html
+++ b/index.html
@@ -16,27 +16,32 @@
         </div>
         <!-- This is the section holding the button and the group image -->
         <div class="content m-auto items-center">
-            <h1 class="font-dms text-3xl font-semibold leading-9 tracking-tight pb-8">Real People,<br> Real Connections.</h1>
-            <div>
-                <img src="img/KT home prop.png" alt="" class="pb-8">
-                <button class="bg-primary py-2 px-5 rounded-md text-white m-auto block">
-                    Get Started
-                </button> 
+            <div class="md:flex md:flex-row md:items-center">
+                <div class="w-full md:w-1/2 p-4 md:float-right">
+                    <h1 class="font-dms text-3xl font-semibold leading-9 tracking-tight pb-8">Real People,<br> Real Connections.</h1>
+                </div>
+                <div class="w-full md:w-1/2 p-4">
+                    <img src="img/KT home prop.png" alt="group image" class="pb-8 md:w-1/2 md:h-auto">
+                    <button class="bg-primary py-2 px-5 rounded-md text-white m-auto block">
+                        Get Started
+                    </button> 
+                </div>
             </div>
+            
             <!-- This is the rest of the section contating the benefits/features of KT -->
-            <div class="m-auto text-center pb-8">
+            <div class="m-auto text-center md:justify-center pb-8">
                 <h2 class="landingFont pt-2">Find People and activities that interest you...</h2>
-                <img src="img/kt-interest-demo.png" alt="">
+                <img src="img/kt-interest-demo.png" alt="" class="md:w-1/2 md:h-auto">
                 <h2 class="landingFont">Want to go on trip but not alone?</h2>
-                <img src="img/kt-join-invite-demo2.png" alt="">
+                <img src="img/kt-join-invite-demo2.png" alt="" class="md:w-1/2 md:h-auto">
                 <h2 class="landingFont">New to something and could use a headstart from someone?</h2>
-                <img src="img/kt-invites-demo.png" alt="" class="pb-6">
+                <img src="img/kt-invites-demo.png" alt="" class="md:w-1/2 md:h-auto">
                 <h2 class="landingFont">How Konnectify Works</h2>
                 <div class="flex gap-4 overflow-x-scroll">
-                    <img src="img/How KT Works/1.png" alt="" class="imgScroll">
-                    <img src="img/How KT Works/2.png" alt="" class="imgScroll">
-                    <img src="img/How KT Works/3.png" alt="" class="imgScroll">
-                    <img src="img/How KT Works/4.png" alt="" class="imgScroll">
+                    <img src="img/How KT Works/1.png" alt="" class="imgScroll md:h-1/2 md:w-1/2">
+                    <img src="img/How KT Works/2.png" alt="" class="imgScroll md:h-1/2 md:w-1/2">
+                    <img src="img/How KT Works/3.png" alt="" class="imgScroll md:h-1/2 md:w-1/2">
+                    <img src="img/How KT Works/4.png" alt="" class="imgScroll md:h-1/2 md:w-1/2">
                 </div>
                 <h2 class="landingFont">The person you’re looking for is also looking for you! You never know who you’ll meet.</h2>
                 <button class="bg-primary py-2 px-5 my-4 rounded-md text-white">
