--- a/index.html
+++ b/index.html
@@ -9,39 +9,39 @@
     <link rel="stylesheet" href="output.css" type="text/css">
 </head>
 <body class="font-robo bg-gradient-to-r from-[#FFFFFF] to-[#B5FFBD] ">
-    <div class="container flex flex-col h-screen p-8 ">
+    <div class="flex flex-col p-8">
         <!-- This is the logo at the top of the page -->
         <div class="px-5 py-2">
             <img src="img/KT Logo/kt-logo-green.png" alt="KT Logo" class="logo" width='85' height='85'>
         </div>
         <!-- This is the section holding the button and the group image -->
-        <div class="content m-auto items-center">
-            <div class="md:flex md:flex-row md:items-center">
-                <div class="w-full md:w-1/2 p-4 md:float-right">
-                    <h1 class="font-dms text-3xl font-semibold leading-9 tracking-tight pb-8">Real People,<br> Real Connections.</h1>
+        <div class="items-center">
+            <div class="md:flex md:flex-row md:items-center justify-between">
+                <div class="w-full md:w-1/2 p-2">
+                    <h1 class="font-dms text-4xl md:text-6xl font-semibold leading-9 tracking-tight pb-8">Real People,<br> Real Connections.</h1>
                 </div>
-                <div class="w-full md:w-1/2 p-4">
-                    <img src="img/KT home prop.png" alt="group image" class="pb-8 md:w-1/2 md:h-auto">
-                    <button class="bg-primary py-2 px-5 rounded-md text-white m-auto block">
+                <div class="w-full md:w-1/2 p-2">
+                    <img src="img/KT home prop.png" alt="group image" class="pb-8 md:max-h-[600px]">
+                    <button class="bg-primary py-2 px-5 md:w-[400px] md:py-4 font-bold rounded-md text-white m-auto block">
                         Get Started
-                    </button> 
+                    </button>
                 </div>
             </div>
-            
+
             <!-- This is the rest of the section contating the benefits/features of KT -->
             <div class="m-auto text-center md:justify-center pb-8">
                 <h2 class="landingFont pt-2">Find People and activities that interest you...</h2>
-                <img src="img/kt-interest-demo.png" alt="" class="md:w-1/2 md:h-auto">
+                <img src="img/kt-interest-demo.png" alt="" class="w-[80vw] m-auto max-w-[400px]">
                 <h2 class="landingFont">Want to go on trip but not alone?</h2>
-                <img src="img/kt-join-invite-demo2.png" alt="" class="md:w-1/2 md:h-auto">
+                <img src="img/kt-join-invite-demo2.png" alt="" class="w-[85vw] m-auto max-w-[800px]">
                 <h2 class="landingFont">New to something and could use a headstart from someone?</h2>
-                <img src="img/kt-invites-demo.png" alt="" class="md:w-1/2 md:h-auto">
+                <img src="img/kt-invites-demo.png" alt="" class="w-[80vw] m-auto max-w-[400px]">
                 <h2 class="landingFont">How Konnectify Works</h2>
                 <div class="flex gap-4 overflow-x-scroll">
-                    <img src="img/How KT Works/1.png" alt="" class="imgScroll md:h-1/2 md:w-1/2">
-                    <img src="img/How KT Works/2.png" alt="" class="imgScroll md:h-1/2 md:w-1/2">
-                    <img src="img/How KT Works/3.png" alt="" class="imgScroll md:h-1/2 md:w-1/2">
-                    <img src="img/How KT Works/4.png" alt="" class="imgScroll md:h-1/2 md:w-1/2">
+                    <img src="img/How KT Works/1.png" alt="" class="imgScroll md:h-1/2 md:w-[500px]">
+                    <img src="img/How KT Works/2.png" alt="" class="imgScroll md:h-1/2 md:w-[500px]">
+                    <img src="img/How KT Works/3.png" alt="" class="imgScroll md:h-1/2 md:w-[500px]">
+                    <img src="img/How KT Works/4.png" alt="" class="imgScroll md:h-1/2 md:w-[500px]">
                 </div>
                 <h2 class="landingFont">The person you’re looking for is also looking for you! You never know who you’ll meet.</h2>
                 <button class="bg-primary py-2 px-5 my-4 rounded-md text-white">
@@ -51,6 +51,6 @@
 
         </div>
     </div>
-   
+
 </body>
 </html>
