--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Landing Page</title>
     <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
     <link rel="stylesheet" href="output.css" type="text/css">
+    <link rel="icon" type="image/x-icon" href="img\KT Logo\kt-logo-green.png">
 </head>
 <body class="font-robo bg-gradient-to-r from-[#FFFFFF] to-[#B5FFBD] ">
     <div class="flex flex-col p-8">
