--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
     <link rel="stylesheet" href="output.css" type="text/css">
     <link rel="icon" type="image/x-icon" href="img\KT Logo\kt-logo-green.png">
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RBCBH9NW98"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-RBCBH9NW98');
+    </script>
 </head>
 <body class="font-robo bg-gradient-to-r from-[#FFFFFF] to-[#B5FFBD] ">
     <div class="flex flex-col p-8">
