--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
     <link rel="stylesheet" href="output.css" type="text/css">
     <link rel="icon" type="image/x-icon" href="img\KT Logo\kt-logo-green.png">
-    
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RBCBH9NW98"></script>
     <script>
@@ -34,7 +34,7 @@
                 <div class="w-full md:w-1/2 p-2">
                     <img src="img/KT home prop.png" alt="group image" class="pb-8 md:max-h-[600px]">
                     <button class="bg-primary py-2 px-5 md:w-[400px] md:py-4 font-bold rounded-md text-white m-auto block">
-                        Get Started
+                       <a href="app.joinkonnectify.com"> Get Started </a>
                     </button>
                 </div>
             </div>
@@ -55,8 +55,8 @@
                     <img src="img/How KT Works/4.png" alt="" class="imgScroll md:h-1/2 md:w-[500px]">
                 </div>
                 <h2 class="landingFont">The person you’re looking for is also looking for you! You never know who you’ll meet.</h2>
-                <button class="bg-primary py-2 px-5 my-4 rounded-md text-white">
-                    Get Started
+                <button class="bg-primary py-2 px-5 my-4 rounded-md text-white ">
+                    <a href="app.joinkonnectify.com"> Get Started </a>
                 </button>
             </div>
 
