updated link to get started

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="w-full md:w-1/2 p-2">
                     <img src="img/KT home prop.png" alt="group image" class="pb-8 md:max-h-[600px]">
                     <button class="bg-primary py-2 px-5 md:w-[400px] md:py-4 font-bold rounded-md text-white m-auto block">
-                       <a href="app.joinkonnectify.com"> Get Started </a>
+                       <a href="https://app.joinkonnectify.com"> Get Started </a>
                     </button>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                 </div>
                 <h2 class="landingFont">The person you’re looking for is also looking for you! You never know who you’ll meet.</h2>
                 <button class="bg-primary py-2 px-5 my-4 rounded-md text-white ">
-                    <a href="app.joinkonnectify.com"> Get Started </a>
+                    <a href="https://app.joinkonnectify.com"> Get Started </a>
                 </button>
             </div>
 
