Added more use cases

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                 <img src="img/kt-interest-demo.png" alt="" class="w-[80vw] m-auto max-w-[400px]">
                 <h2 class="landingFont">Want to go on trip but not alone?</h2>
                 <img src="img/kt-join-invite-demo2.png" alt="" class="w-[85vw] m-auto max-w-[800px]">
+                <h2 class="landingFont">Want to play Basketball with a group?</h2>
+                <img src="img/kt-3-3-bball.png" alt="" class="w-[85vw] m-auto max-w-[800px]">
+                <h2 class="landingFont">Want to share ideas over Lunch?</h2>
+                <img src="img/kt-lunch.png" alt="" class="w-[85vw] m-auto max-w-[800px]">
                 <h2 class="landingFont">New to something and could use a headstart from someone?</h2>
                 <img src="img/kt-invites-demo.png" alt="" class="w-[80vw] m-auto max-w-[400px]">
                 <h2 class="landingFont">How Konnectify Works</h2>
