Added button to app and compressed images

--- a/install.html
+++ b/install.html
@@ -25,7 +25,10 @@
                     2. Then click on Add to home screen <br>
                     3. Name the app and click done <br>
                     4. Bravo! You have the app on your phone, go ahead and create an account.
-                </p> <br><br>
+                </p>
+                <button class="bg-primary py-2 px-5 my-4 rounded-md text-white ">
+                    <a href="https://app.joinkonnectify.com"> Cotinue... </a>
+                </button> <br><br>
             </div>
 
             <div class="">
@@ -37,6 +40,9 @@
                     3. The app would start and complete download in a few seconds <br>
                     4. Bravo! You have the app on your phone, go ahead and create an account.
                 </p>
+                <button class="bg-primary py-2 px-5 my-4 rounded-md text-white ">
+                    <a href="https://app.joinkonnectify.com"> Continue... </a>
+                </button>
             </div>
 
         </div>
