--- a/install.html
+++ b/install.html
@@ -27,7 +27,7 @@
                     4. Bravo! You have the app on your phone, go ahead and create an account.
                 </p>
                 <button class="bg-primary py-2 px-5 my-4 rounded-md text-white ">
-                    <a href="https://app.joinkonnectify.com"> Cotinue... </a>
+                    <a href="https://app.joinkonnectify.com"> Cotinue to Install... </a>
                 </button> <br><br>
             </div>
 
@@ -41,7 +41,7 @@
                     4. Bravo! You have the app on your phone, go ahead and create an account.
                 </p>
                 <button class="bg-primary py-2 px-5 my-4 rounded-md text-white ">
-                    <a href="https://app.joinkonnectify.com"> Continue... </a>
+                    <a href="https://app.joinkonnectify.com"> Continue to install... </a>
                 </button>
             </div>
 
