changed logo colors

--- a/install.html
+++ b/install.html
@@ -7,13 +7,13 @@
     <title>Install Konnectify</title>
     <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
     <link rel="stylesheet" href="output.css" type="text/css">
-    <link rel="icon" type="image/x-icon" href="img\KT Logo\kt-logo-green.png">
+    <link rel="icon" type="image/x-icon" href="img\KT Logo\kt-logo.png">
 </head>
 <body class="font-robo bg-gradient-to-r from-[#FFFFFF] to-[#B5FFBD] ">
     <div class="flex flex-col p-8">
         <!-- This is the logo at the top of the page -->
         <div class="px-5 py-2">
-            <img src="img/KT Logo/kt-logo-green.png" alt="KT Logo" class="logo" width='85' height='85'>
+            <img src="img/KT Logo/kt-logo.png" alt="KT Logo" class="logo" width='85' height='85'>
         </div>
         <!-- This is the section holding the Install information -->
         <div class="">
