--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Konnectify</title>
     <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
     <link rel="stylesheet" href="output.css" type="text/css">
-    <link rel="icon" type="image/x-icon" href="img\KT Logo\kt-logo-green.png">
+    <link rel="icon" type="image/x-icon" href="img\KT Logo\kt-logo.png">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RBCBH9NW98"></script>
@@ -23,7 +23,7 @@
     <div class="flex flex-col p-8">
         <!-- This is the logo at the top of the page -->
         <div class="px-5 py-2">
-            <img src="img/KT Logo/kt-logo-green.png" alt="KT Logo" class="logo" width='85' height='85'>
+            <img src="img/KT Logo/kt-logo.png" alt="KT Logo" class="logo" width='85' height='85'>
         </div>
         <!-- This is the section holding the button and the group image -->
         <div class="items-center">
